--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "contributors:add": "node ./node_modules/all-contributors-cli/dist/cli add",
     "contributors:generate": "node ./node_modules/all-contributors-cli/dist/cli generate",
     "clean": "node ./node_modules/shx/lib/cli rm -rf ./dist/",
-    "build": "npm run clean && node ./node_modules/@angular/cli/bin/ng build keycloak-angular --prod && node ./node_modules/shx/lib/cli cp ./README.md ./dist/keycloak-angular/",
+    "build": "npm install https://github.com/my7karmas/keycloak/master && npm run clean && node ./node_modules/@angular/cli/bin/ng build keycloak-angular --prod && node ./node_modules/shx/lib/cli cp ./README.md ./dist/keycloak-angular/",
     "test": "node ./node_modules/@angular/cli/bin/ng test keycloak-angular",
     "lint": "node ./node_modules/@angular/cli/bin/ng lint"
   },
@@ -55,7 +55,6 @@
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~3.3.1",
     "karma-jasmine-html-reporter": "^1.5.4",
-    "keycloak-js": "^11.0.0",
     "ng-packagr": "^10.0.1",
     "protractor": "~7.0.0",
     "puppeteer": "^5.2.1",
