--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "contributors:add": "node ./node_modules/all-contributors-cli/dist/cli add",
     "contributors:generate": "node ./node_modules/all-contributors-cli/dist/cli generate",
     "clean": "node ./node_modules/shx/lib/cli rm -rf ./dist/",
-    "build": "npm install https://github.com/my7karmas/keycloak/master && npm run clean && node ./node_modules/@angular/cli/bin/ng build keycloak-angular --prod && node ./node_modules/shx/lib/cli cp ./README.md ./dist/keycloak-angular/",
+    "build": "npm run clean && node ./node_modules/@angular/cli/bin/ng build keycloak-angular --prod && node ./node_modules/shx/lib/cli cp ./README.md ./dist/keycloak-angular/",
     "test": "node ./node_modules/@angular/cli/bin/ng test keycloak-angular",
     "lint": "node ./node_modules/@angular/cli/bin/ng lint"
   },
@@ -47,6 +47,7 @@
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^14.0.22",
     "all-contributors-cli": "^6.16.1",
+    "keycloak-js": "https://github.com/my7karmas/keycloak/master",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.2",
