--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^14.0.22",
     "all-contributors-cli": "^6.16.1",
-    "keycloak-js": "my7karmas/keycloak",
+    "keycloak-js": "git:my7karmas/keycloak",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.2",
